[gd_scene load_steps=3 format=3 uid="uid://duu2defrp2kla"]

[ext_resource type="Script" path="res://ui.gd" id="1_whqeh"]

[sub_resource type="ButtonGroup" id="ButtonGroup_kugig"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_whqeh")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = -1
anchor_left = 0.823
anchor_top = 0.01
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.44006
offset_top = -7.2
color = Color(0.239216, 0.192157, 0.341176, 1)
metadata/_edit_lock_ = true

[node name="BulletType" type="HBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.825
anchor_top = 0.089
anchor_right = 0.987
anchor_bottom = 0.178
offset_top = -0.0800018
offset_right = 0.639893
offset_bottom = -0.160004
grow_horizontal = 0
metadata/_edit_lock_ = true

[node name="LinearButton" type="Button" parent="BulletType"]
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_kugig")
text = "Linear"

[node name="SineButton" type="Button" parent="BulletType"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_kugig")
text = "Sine"

[node name="ParabolicButton" type="Button" parent="BulletType"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_kugig")
text = "Parabolic"

[node name="LinearUI" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.844
anchor_top = 0.278
anchor_right = 0.975
anchor_bottom = 0.629
offset_left = -0.320068
offset_top = -0.160019
offset_bottom = 3.12
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LinearUI"]
layout_mode = 2

[node name="Label" type="Label" parent="LinearUI/VBoxContainer"]
layout_mode = 2
text = "Speed
"

[node name="HSlider" type="HSlider" parent="LinearUI/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="LinearUI"]
layout_mode = 2

[node name="Label2" type="Label" parent="LinearUI/VBoxContainer2"]
layout_mode = 2
text = "Fire rate"

[node name="HSlider" type="HSlider" parent="LinearUI/VBoxContainer2"]
layout_mode = 2

[node name="RotateButton" type="Button" parent="LinearUI"]
layout_mode = 2
text = "Rotate"

[node name="SineUI" type="VBoxContainer" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.844
anchor_top = 0.278
anchor_right = 0.975
anchor_bottom = 0.933
offset_left = -0.320068
offset_top = -0.160019
offset_bottom = 0.23999
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 40

[node name="VBoxContainer" type="VBoxContainer" parent="SineUI"]
layout_mode = 2

[node name="Label" type="Label" parent="SineUI/VBoxContainer"]
layout_mode = 2
text = "Amplitude"

[node name="AmplitudeButton" type="HSlider" parent="SineUI/VBoxContainer"]
layout_mode = 2
max_value = 25.0

[node name="VBoxContainer2" type="VBoxContainer" parent="SineUI"]
layout_mode = 2

[node name="Label2" type="Label" parent="SineUI/VBoxContainer2"]
layout_mode = 2
text = "Frequency"

[node name="FrequencyButton" type="HSlider" parent="SineUI/VBoxContainer2"]
layout_mode = 2
max_value = 25.0

[node name="ParabolicUI" type="VBoxContainer" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="BulletType/LinearButton" to="." method="_on_linear_button_pressed"]
[connection signal="pressed" from="BulletType/SineButton" to="." method="_on_sine_button_pressed"]
[connection signal="pressed" from="BulletType/ParabolicButton" to="." method="_on_parabolic_button_pressed"]
[connection signal="pressed" from="LinearUI/RotateButton" to="." method="_on_rotate_button_pressed"]
[connection signal="value_changed" from="SineUI/VBoxContainer/AmplitudeButton" to="." method="_on_amplitude_button_value_changed"]
[connection signal="value_changed" from="SineUI/VBoxContainer2/FrequencyButton" to="." method="_on_frequency_button_value_changed"]
